[project]
name = "agent-with-strands-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.51",
    "botocore[crt]>=1.43.51",
    "strands-agents-tools>=0.8.4",
]

[dependency-groups]
dev = [
    "strands-agents>=1.48.0",
]
